--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scroll-to-top": "^3.0.0",
     "react-vertical-timeline-component": "^3.6.0",
     "typewriter-effect": "^2.20.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
